--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,25 +1,13 @@
 <header class="header">
-	header
-	<a [routerLink]="['/signup']">signup</a>
-	<nav class="navbar navbar-default navbar-static-top">
-		<div class="header-wrap container">
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-				 aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+				<a class="navbar-brand">BIMS</a>
 			</div>
-			<div class="title-wrap">
-				<h1 class="frm-title">BIMS</h1>
-			</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="logout-wrap" ><i class="fa fa-sign-out" aria-hidden="true"></i><span class="logout-btn">Logout</span></li>
-				</ul>
-			</div>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a [routerLink]="['/signup']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+				<li><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			</ul>
 		</div>
 	</nav>
 </header>
